    - Removed bts770690_java_jni_thread_detach.dpatch; merged upstream.
    - Removed bts770693_timestamps.dpatch; merged upstream.
    - Removed bts770694_loglevel.dpatch; merged upstream.
    - Removed myplugin_api.dpatch; merged upstream.
  * debian/collectd-dev.install, myplugin_includes.dpatch:
    - Update path to header files moved to daemon/ subdirectory upstream.

 -- Marc Fournier <marc.fournier@camptocamp.com>  Tue, 30 Jun 2015 07:08:39 +0200

collectd (5.4.1-6) unstable; urgency=medium

  * debian/patches:
    - Added bts770681_riemann_ack: upstream fix for the write_riemann plugin
      to avoid locking up a remote Riemann instance; thanks to Marc Fournier
      for reporting this (Closes: #770681).
    - Added bts747093_lvm_segfault: upstream fix for a segfault in the LVM
      plugin; thanks to Bernd Zeimetz and Marc Fournier for reporting this
      (Closes: #747093).
    - Added bts770683_curl_init: upstream fix for a segfault in plugins using
      libcurl caused by concurrent memory access; thanks to Marc Fournier for
      reporting this (Closes: #770683, cf. #735173).
    - Added bts750440_config_segfault: upstream fix for a segfault when
      including empty config files; thanks to Bernd Zeimetz and Marc Fournier
      for reporting this (Closes: #750440, #770685).
    - Added bts770688_snmp_memleak: upstream fix for a memory leak in the
      SNMP plugin; thanks to Marc Fournier for reporting this
      (Closes: #770688).
    - Added bts770690_java_jni_thread_detach: upstream fix for locking up the
      Java plugin by not properly detaching from the JVM in error conditions;
      thanks to Marc Fournier for reporting this (Closes: #770690).
    - Added bts770693_timestamps: upstream fix for handling internal
      timestamps; thanks to Marc Fournier for reporting this (Closes: #770693)
    - Added bts770694_loglevel: upstream fix to correct logging behavior when
      using an invalid log level; thanks to Marc Fournier for reporting this