@@ -13,6 +13,7 @@ Build-Depends: debhelper (>= 5), dpkg-dev (>= 1.14.10), po-debconf, dpatch,
  libganglia1-dev (>= 3) [linux-any],
  libgcrypt11-dev,
  libglib2.0-dev,
+ libhiredis-dev,
  libkvm-dev [kfreebsd-any],
  liblvm2-dev [linux-any],
  libmemcached-dev,
@@ -30,14 +31,14 @@ Build-Depends: debhelper (>= 5), dpkg-dev (>= 1.14.10), po-debconf, dpatch,
  librabbitmq-dev,
  librrd-dev (>= 1.4~),
  libsensors4-dev [linux-any],
-# libsigrok-dev (>= 0.2~),
+ libsigrok-dev (>= 0.2~),
 # libsnmp-dev (>= 5.4.2.1~dfsg-4~) | (libsnmp-dev & perl (<< 5.10.1~rc2-1~))
  libsnmp-dev (>= 5.4.2.1~dfsg-4~) | libsnmp-dev | libsnmp9-dev,
  libsnmp-dev (>= 5.4.2.1~dfsg-4~) | perl (<< 5.10.1~rc2-1~),
  libtokyocabinet-dev [linux-any],
  libtokyotyrant-dev [linux-any],
  libupsclient-dev | libupsclient1-dev,
-# libvarnishapi-dev,
+ libvarnishapi-dev,
  libvirt-dev (>= 0.4.0-6) [linux-any],
  libxml2-dev,
  libyajl-dev,
